<!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Food Expiry Tracker</string>
    <string name="decrement_count">Decrement</string>
    <string name="increment_count">Increment</string>
    <string name="quantity">Quantity in Stock:</string>
    <string name="quantity_req">Quantity in Stock <font color='#FF0000'>*</font></string>
    <string name="item_name_req">Ingredient Name <font color='#FF0000'>*</font></string>
    <string name="item_price_req">Item Price <font color='#FF0000'>*</font></string>
    <string name="save_action">Save</string>
    <string name="item_detail_fragment_title">Item Details</string>
    <string name="recipe_list_fragment_title">Recipe List</string>
    <string name="recipe_detail_fragment_title">Recipe Details</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>
    <string name="price">Price</string>
    <string name="quantity_in_stock">Quantity\nIn Stock</string>
    <string name="item">Item</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="currency_symbol">$</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_new_item">Add new item</string>
    <string name="select_label">Select Label</string>
    <string name="upload">Upload Photo</string>
    <string name="notify">Notify</string>
    <string name="channel_name">Expirations</string>
    <string name="channel_description">Notification channel for ingredient expiry messages</string>
    <string name="expiring_soon">Expiring Soon</string>
    <string name="expiration_message">%1$s expires in %2$d days</string>
    <string name="ingredient">Ingredient</string>
    <string name="expiry_in">Expiry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="findFoodbanks">Find nearby foodbanks</string>
    <string name="expiry_hint">Ingredient expired. Please discard and delete.</string>
    <string name="consumed_hint">Ingredient consumed. Please delete.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>