<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/itemListFragment">

    <fragment
        android:id="@+id/itemListFragment"
        android:name="com.example.inventory.ItemListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/item_list_fragment">
        <action
            android:id="@+id/action_itemListFragment_to_itemDetailFragment"
            app:destination="@id/itemDetailFragment"
            app:popUpTo="@id/itemListFragment"
            app:popUpToSaveState="true"/>
        <action
            android:id="@+id/action_itemListFragment_to_addItemFragment"
            app:destination="@id/addItemFragment" />
        <action
            android:id="@+id/action_itemListFragment_to_recipeListFragment"
            app:destination="@id/recipeListFragment" />
    </fragment>
    <fragment
        android:id="@+id/itemDetailFragment"
        android:name="com.example.inventory.ItemDetailFragment"
        android:label="@string/item_detail_fragment_title"
        tools:layout="@layout/fragment_item_detail">
        <argument
            android:name="item_id"
            app:argType="integer" />
        <action
            android:id="@+id/action_itemDetailFragment_to_addItemFragment"
            app:destination="@id/addItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/addItemFragment"
        android:name="com.example.inventory.AddItemFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_add_item">
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="item_id"
            android:defaultValue="-1"
            app:argType="integer" />
        <action
            android:id="@+id/action_addItemFragment_to_itemListFragment"
            app:destination="@id/itemListFragment"
            app:popUpTo="@id/itemListFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/recipeListFragment"
        android:name="com.example.inventory.RecipeListFragment"
        android:label="@string/recipe_list_fragment_title"
        tools:layout="@layout/recipe_list_fragment">
    <action
        android:id="@+id/action_recipeListFragment_to_recipeDetailFragment"
        app:destination="@id/recipeDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/recipeDetailFragment"
        android:name="com.example.inventory.RecipeDetailFragment"
        android:label="@string/recipe_detail_fragment_title"
        tools:layout="@layout/fragment_recipe_detail">
        <argument android:name="recipe"
            app:argType="com.example.inventory.Recipe" />
        <action
            android:id="@+id/action_recipeDetailFragment_to_recipeInstructionsFragment"
            app:destination="@id/recipeInstructionsFragment" />
    </fragment>
    <fragment
        android:id="@+id/recipeInstructionsFragment"
        android:name="com.example.inventory.RecipeInstructionsFragment"
        android:label="Recipe Instructions"
        tools:layout="@layout/fragment_recipe_instructions">
        <argument
            android:name="recipeId"
            app:argType="integer" />
    </fragment>
</navigation>
